--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: default
             <header class="major">
                 <h2><span class="icon fa-user"></span> About Me</h2>
             </header>
-		<p>Hello, my name is Paul Wang. where I am currently completing my first year of a Bachelor's degree in Computer Science at the University of British Columbia.
+		<p>Hello, my name is Paul Wang. I am software developer based in B.C. Canada where I am currently completing my first year of a Bachelor's degree in Computer Science at the University of British Columbia.
 		</p>
-		<p> Aside from software development, my interests also include digital painting, game design and music composition. Feel free to explore my website and send me an email for any questions or if you find a bug on this site!
+		<p> Aside from software development, my interests also include digital painting, game design and music composition. Feel free to check out my website and send me an email for any questions or if you find a bug on this site!
 		</p>
     </section>
 
