added chatter project, updated bio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
             </header>
 
 		<p>Hello, my name is Paul Wang and I'm a software developer based in Vancouver B.C.</p>
-<p>I'm currently a first year undergraduate student majoring in Computer Science at the University of British Columbia. In my spare time, I strive to adopt the latest programming strategies and workflows while designing my own software. Aside from software development though, my interests also include digital painting, game design and music composition.
+<p>I'm currently a second year undergraduate student majoring in Computer Science at the University of British Columbia. In my spare time, I strive to adopt the latest programming strategies and workflows while designing my own software. Aside from software development though, my interests also include digital painting, game design and music composition.
 		</p>
 <p>
 Feel free to explore my website and send me an email for any inquiries or if you find a bug on this site!
