--- a/index.html
+++ b/index.html
@@ -2,45 +2,9 @@
 layout: default
 ---
 
-
 <!-- Main -->
 <div id="main">
-    <section>
-        <header id = "about" class="major">
-            <h2><span class="icon fa-user"></span> About Me</h2>
-        </header>
-
-        <p>Hello, my name is Paul Wang; I am a software developer based in Vancouver B.C.</p>
-        <p>I am currently a second year undergraduate student majoring in Computer Science at the University of British Columbia. In my spare time, I aim to learn and adopt the latest programming strategies, workflows while designing my own software. Aside from software development though, my interests also include digital painting, game design and music composition.
-        </p>
-        <p>
-            Feel free to explore my website and send me an email for any inquiries or if you find a bug on this site!
-        </p>
-    </section>
-
-    <section>
-       <div>
-           <header id="portfolio" class="major">
-            <h2><span class="icon fa-folder-open-o"></span> Portfolio</h2>
-        </header>
-    </div>
-    <div class="row">
-        {% for post in site.posts %}
-
-        <article class="{% cycle '6u', '6u$' %} 12u(small)">
-          <center>{{ post.title }}</center>    
-          {% assign images = post.content | split:"<img " %}
-          {% for image in images %}
-          {% if image contains 'src=' %}
-          {% assign imageMarkup = image | split:"class" | first %}
-          <a href={{post.url}} class="image fit thumb"><img {{ imageMarkup }}></a>
-          {% break %}
-          {% endif %}
-          {% endfor %}
-
-      </article>
-
-      {% endfor %}
-  </div>
-</section>
+<script>
+loadURL('main.html');
+</script>
 </div>
