--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 ---
 ---
- <section>
+ <section id="home">
         <header id = "about" class="major">
             <h2><span class="icon fa-user"></span> About Me</h2>
         </header>
