modified essay header text

--- a/main.html
+++ b/main.html
@@ -42,8 +42,8 @@
 </section>
 
  <section>
-        <header id = "writings" class="major">
-            <h2><span class="icon fa-book"></span> Writings</h2>
+        <header id = "essays" class="major">
+            <h2><span class="icon fa-book"></span> Essays</h2>
         </header>
 	<ul>
 	<li><p><a href="/files/engl112-research-essay.pdf" class="icon fa-file">
