--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 ---
 ---
-<section id="home">
+<section id="home" class="fade">
   <header id = "about" class="major">
     <h2><span class="icon fa-user"></span> About Me</h2>
   </header>
-  <p>Greetings - I'm a software developer based in Vancouver British Columbia studying in my third year towards a Bachelor of Science, Computer Science major degree at the University of British Columbia.</p>
+  <p>Greetings -- I'm a software developer based in Vancouver British Columbia studying in my third year towards a Bachelor of Science, Computer Science major degree at the University of British Columbia.</p>
   <p>In my spare time I design software as a way to challenge my creativity and discover the latest technological tools and workflows; you will find most of these projects detailed below.</p>
   <p>Aside from programming though, my interests also include digital painting, game design and music composition. Feel free to send me an email for any inquiries or to let me know if you found a bug!</p>
 </section>
