--- a/main.html
+++ b/main.html
@@ -1,18 +1,18 @@
 ---
 paginate: true
 ---
-<section id="home">
-  <header id = "about" class="major">
-    <h2><span class="icon fa-user"></span> About Me</h2>
+<section id="home" class="portfolio-section">
+  <header id="about" class="major">
+    <h2 class="h"><span class="icon fa-user"></span> About Me</h2>
   </header>
   <p>Greetings -- I'm a Vancouver-based software developer studying in my third year towards a Bachelor of Science, Computer Science major degree at the University of British Columbia.</p>
   <p>In my spare time I like to design software as a way to challenge my creativity and discover the latest technological tools and workflows; you will find most of these projects detailed below.</p>
   <p>Aside from programming though, my interests also include digital painting, game design and music composition. Feel free to send me an email for any inquiries or to let me know if you found a bug!</p>
 </section>
-<section>
+<section class="portfolio-section">
   <div>
     <header id="portfolio" class="major">
-      <h2><span class="icon fa-folder-open-o"></span> Portfolio</h2>
+      <h2 class="h"><span class="icon fa-folder-open-o"></span> Portfolio</h2>
     </header>
   </div>
   <div class="row">
@@ -31,9 +31,9 @@ paginate: true
   {% endfor %}
   </div>
 </section>
-<section>
+<section class="portfolio-section">
   <header id = "essays" class="major">
-    <h2><span class="icon fa-book"></span> Essays</h2>
+    <h2 class="h"><span class="icon fa-book"></span> Essays</h2>
   </header>
   <ul>
   <li>
