--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 ---
-paginate: true
 ---
 <section id="home" class="portfolio-section">
   <header id="about" class="major">
@@ -9,6 +8,20 @@ paginate: true
   <p>In my spare time I like to design software as a way to challenge my creativity and discover the latest technological tools and workflows; you will find most of these projects detailed below.</p>
   <p>Aside from programming though, my interests also include digital painting, game design and music composition. Feel free to send me an email for any inquiries or to let me know if you found a bug!</p>
 </section>
+<div id="menu" align="center">
+<div onclick="loadURL('main.html', 'portfolio')" class="button">
+  Portfolio
+</div>
+<div onclick="loadURL('main.html', 'hackathons')" class="button">
+  Hackathons
+</div>
+<div onclick="loadURL('main.html', 'work-placements')" class="button">
+  Work Placements
+</div>
+<div onclick="loadURL('main.html', 'essays')" class="button">
+  Essays
+</div>
+</div>
 <section class="portfolio-section">
   <div>
     <header id="portfolio" class="major">
@@ -16,14 +29,58 @@ paginate: true
     </header>
   </div>
   <div class="row">
-    {% for post in site.posts %}
+    {% for post in site.categories.featured %}
     <article class="{% cycle '6u', '6u$' %} 12u(small)">
     <center>{{ post.title }}</center>    
     {% assign images = post.content | split:"<img " %}
     {% for image in images %}
     {% if image contains 'src=' %}
     {% assign imageMarkup = image | split:"class" | first %}
-  <div onclick="loadURL('{{post.url}}')" class = "image fit thumb mouse-hover"> <img {{ imageMarkup }}></div>
+  <div onclick="loadURL('{{post.url}}')" class = "image fit thumb mouse-hover shadow"><img {{ imageMarkup }}></div>
+    {% break %}
+    {% endif %}
+    {% endfor %}
+  </article>
+  {% endfor %}
+  </div>
+</section>
+<section class="portfolio-section">
+  <div>
+    <header id="hackathons" class="major">
+      <h2 class="h"><span class="icon fa-code"></span> Hackathons</h2>
+    </header>
+  </div>
+  <div class="row">
+    {% for post in site.categories.hackathons %}
+    <article class="{% cycle '6u', '6u$' %} 12u(small)">
+    <center>{{ post.title }}</center>    
+    {% assign images = post.content | split:"<img " %}
+    {% for image in images %}
+    {% if image contains 'src=' %}
+    {% assign imageMarkup = image | split:"class" | first %}
+  <div onclick="loadURL('{{post.url}}')" class = "image fit thumb mouse-hover shadow"> <img {{ imageMarkup }}></div>
+    {% break %}
+    {% endif %}
+    {% endfor %}
+  </article>
+  {% endfor %}
+  </div>
+</section>
+<section class="portfolio-section">
+  <div>
+    <header id="work-placements" class="major">
+      <h2 class="h"><span class="icon fa-building"></span> Work Placements</h2>
+    </header>
+  </div>
+  <div class="row">
+    {% for post in site.categories.work_placements %}
+    <article class="{% cycle '6u', '6u$' %} 12u(small)">
+    <center>{{ post.title }}</center>    
+    {% assign images = post.content | split:"<img " %}
+    {% for image in images %}
+    {% if image contains 'src=' %}
+    {% assign imageMarkup = image | split:"class" | first %}
+  <div onclick="loadURL('{{post.url}}')" class = "image fit thumb mouse-hover shadow"> <img {{ imageMarkup }}></div>
     {% break %}
     {% endif %}
     {% endfor %}
